// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GalleryView component with decoration > Default component with first_cell decoration 1`] = `
<div
  class="gallery-view"
>
  <button
    class="button-floating button-floating--fixed button-floating--primary button-floating--regular"
  >
    <i
      class="button-floating__icon iconoir-plus"
    />
  </button>
  <div
    class="gallery-view__scroll"
  >
    <div
      class="gallery-view__cards"
      style="height: 438px;"
    >
      
      <div
        class="card gallery-view__card"
        style="width: -60px; transform: translateX(30px) translateY(30px);"
      >
        
        <div>
          fake_decoration: fake_value
        </div>
        <div>
          fake_decoration: fake_value
        </div>
        
        
        <!--v-if-->
        <div
          class="card__content"
        >
          <div
            class="card__fields"
          >
            
            <div
              class="card__field"
            >
              <div
                class="card__field-name"
              >
                Name
              </div>
              <div
                class="card__field-value"
              >
                <div
                  class="card-text"
                  field="[object Object]"
                  row="[object Object]"
                  workspace-id="1"
                >
                  first
                </div>
              </div>
            </div>
            <div
              class="card__field"
            >
              <div
                class="card__field-name"
              >
                Surname
              </div>
              <div
                class="card__field-value"
              >
                <div
                  class="card-text"
                  field="[object Object]"
                  row="[object Object]"
                  workspace-id="1"
                >
                  Bram
                </div>
              </div>
            </div>
            <div
              class="card__field"
            >
              <div
                class="card__field-name"
              >
                Address
              </div>
              <div
                class="card__field-value"
              >
                <div
                  class="card-text"
                  field="[object Object]"
                  row="[object Object]"
                  workspace-id="1"
                />
              </div>
            </div>
            
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`GalleryView component with decoration > Default component with row wrapper decoration 1`] = `
<div
  class="gallery-view"
>
  <button
    class="button-floating button-floating--fixed button-floating--primary button-floating--regular"
  >
    <i
      class="button-floating__icon iconoir-plus"
    />
  </button>
  <div
    class="gallery-view__scroll"
  >
    <div
      class="gallery-view__cards"
      style="height: 438px;"
    >
      
      <div
        class="card gallery-view__card"
        style="width: -60px; transform: translateX(30px) translateY(30px);"
      >
        
        
        <div
          class="test-wrapper"
          value="fake_value"
        >
          <div
            class="test-wrapper"
            value="fake_value"
          >
            <!--v-if-->
            <div
              class="card__content"
            >
              <div
                class="card__fields"
              >
                
                <div
                  class="card__field"
                >
                  <div
                    class="card__field-name"
                  >
                    Name
                  </div>
                  <div
                    class="card__field-value"
                  >
                    <div
                      class="card-text"
                      field="[object Object]"
                      row="[object Object]"
                      workspace-id="1"
                    >
                      first
                    </div>
                  </div>
                </div>
                <div
                  class="card__field"
                >
                  <div
                    class="card__field-name"
                  >
                    Surname
                  </div>
                  <div
                    class="card__field-value"
                  >
                    <div
                      class="card-text"
                      field="[object Object]"
                      row="[object Object]"
                      workspace-id="1"
                    >
                      Bram
                    </div>
                  </div>
                </div>
                <div
                  class="card__field"
                >
                  <div
                    class="card__field-name"
                  >
                    Address
                  </div>
                  <div
                    class="card__field-value"
                  >
                    <div
                      class="card-text"
                      field="[object Object]"
                      row="[object Object]"
                      workspace-id="1"
                    />
                  </div>
                </div>
                
              </div>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`GalleryView component with decoration > Default component with unavailable decoration 1`] = `
<div
  class="gallery-view"
>
  <button
    class="button-floating button-floating--fixed button-floating--primary button-floating--regular"
  >
    <i
      class="button-floating__icon iconoir-plus"
    />
  </button>
  <div
    class="gallery-view__scroll"
  >
    <div
      class="gallery-view__cards"
      style="height: 438px;"
    >
      
      <div
        class="card gallery-view__card"
        style="width: -60px; transform: translateX(30px) translateY(30px);"
      >
        
        
        
        <!--v-if-->
        <div
          class="card__content"
        >
          <div
            class="card__fields"
          >
            
            <div
              class="card__field"
            >
              <div
                class="card__field-name"
              >
                Name
              </div>
              <div
                class="card__field-value"
              >
                <div
                  class="card-text"
                  field="[object Object]"
                  row="[object Object]"
                  workspace-id="1"
                >
                  first
                </div>
              </div>
            </div>
            <div
              class="card__field"
            >
              <div
                class="card__field-name"
              >
                Surname
              </div>
              <div
                class="card__field-value"
              >
                <div
                  class="card-text"
                  field="[object Object]"
                  row="[object Object]"
                  workspace-id="1"
                >
                  Bram
                </div>
              </div>
            </div>
            <div
              class="card__field"
            >
              <div
                class="card__field-name"
              >
                Address
              </div>
              <div
                class="card__field-value"
              >
                <div
                  class="card-text"
                  field="[object Object]"
                  row="[object Object]"
                  workspace-id="1"
                />
              </div>
            </div>
            
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;
